--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,10 @@
       href="https://fonts.googleapis.com/css2?family=Cutive&display=swap"
       rel="stylesheet"
     />
+    <!--Font Nazaré-->
+    <link rel="stylesheet" href="https://use.typekit.net/wcs6wmj.css">
+     <!--Font Artigo-->
+    <link rel="stylesheet" href="https://use.typekit.net/wcs6wmj.css">
     <title>AltaBaixa</title>
   </head>
   <body>
