--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Alta&Baixa"
+      content="Revista de cultura tipográfica, vol. 1, issue 1.
+    Trabalho realizado por Angela Laspriella, Carolina Almeida, Francisca Laureano e Rita Silva, no âmbito da 
+    unidade curricular de Oficina de Design de Comunicação, do Mestrado em Design e Multimédia
+    da Faculdade de Cienciâs e Tecnologia da Universidade de Coimbra, sob a orientação do professor Artur Rebelo. "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -33,9 +36,9 @@
       rel="stylesheet"
     />
     <!--Font Nazaré-->
-    <link rel="stylesheet" href="https://use.typekit.net/wcs6wmj.css">
-     <!--Font Artigo-->
-    <link rel="stylesheet" href="https://use.typekit.net/wcs6wmj.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wcs6wmj.css" />
+    <!--Font Artigo-->
+    <link rel="stylesheet" href="https://use.typekit.net/wcs6wmj.css" />
     <title>AltaBaixa</title>
   </head>
   <body>
